remove a displayed property feature